src/test/testData/docker_compose/DC004/docker-compose.yml.denied
version: '3.1'

services:
  db:
    <error descr="Using privileged: true grants full root access to the host, bypassing isolation mechanisms.">privileged: true</error>
    image: mysql:8.4
    restart: always
    user: mysql
    ports:
      - "8080"
    environment:
      MYSQL_ROOT_PASSWORD: example